--- a/.gitignore
+++ b/.gitignore
@@ -189,4 +189,5 @@ output_folder/
 
 culturalitems-no-transformer/*
 no_transformer/.vector_cache/*
+.vector_cache
 no_transformer/culturalitems-no-transformer/*
