--- a/sentence_splitter/pyproject.toml
+++ b/sentence_splitter/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "torch>=2.7.0",
-    "pytorch-triton-rocm"
+    "pytorch-triton-rocm",
+    "transformers>=4.53.3"
 ]
 
 [tool.uv.workspace]
