--- a/sentence_splitter/pyproject.toml
+++ b/sentence_splitter/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "torch>=2.7.0",
     "pytorch-triton-rocm",
-    "transformers>=4.53.3"
+    "transformers>=4.53.3",
+    "pandas>=2.3.1",
 ]
 
 [tool.uv.workspace]
