Add utils and hyper params

--- a/sentence_splitter/pyproject.toml
+++ b/sentence_splitter/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
 members = [
     "sentence_splitter_embedding_model",
     "sentence_splitter_llm",
+    "util",
 ]
 
 [tool.uv.sources]
