--- a/nlp-play/pyproject.toml
+++ b/nlp-play/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "datasets==3.6.0",
     "transformers>=4.54.0",
 ]
 
