--- a/nlp-play/pyproject.toml
+++ b/nlp-play/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "datasets==3.6.0",
+    "torch>=2.7.1",
     "transformers>=4.54.0",
 ]
 
@@ -16,5 +17,7 @@ members = [
 
 [dependency-groups]
 dev = [
+    "black>=25.1.0",
+    "flake8>=7.3.0",
     "pytest>=8.4.1",
 ]
