--- a/nlp-play/pyproject.toml
+++ b/nlp-play/pyproject.toml
@@ -9,8 +9,9 @@ dependencies = [
     "datasets==3.6.0",
     "evaluate>=0.4.5",
     "seqeval>=1.2.2",
-    "torch>=2.7.1",
-    "transformers>=4.54.0",
+    "torch>=2.7.0",
+    "pytorch-triton-rocm",
+    "transformers>=4.53.3",
 ]
 
 [tool.uv.workspace]
@@ -24,3 +25,21 @@ dev = [
     "flake8>=7.3.0",
     "pytest>=8.4.1",
 ]
+
+[tool.uv.sources]
+torch = [
+    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
+]
+torchvision = [
+    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
+]
+# ROCm6 support relies on `pytorch-triton-rocm`, which should also be installed from the PyTorch index
+# (and included in `project.dependencies`).
+pytorch-triton-rocm = [
+    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-rocm"
+url = "https://download.pytorch.org/whl/rocm6.3"
+explicit = true
