--- a/sentence_splitter/pyproject.toml
+++ b/sentence_splitter/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "sentencepiece>=0.2.0",
     "unsloth>=2025.8.2",
     "torchvision>=0.22.1",
+    "ipykernel>=6.30.1",
 ]
 
 [tool.uv.workspace]
